sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:3: error: ')' expected but integer literal found.
  for(i <- getNombreValeurs-2 down to 0){
                                      ^AlgBubbleSort2:6: error: illegal start of simple expression
} 
^